# propagator

./: CMakeLists.txt  generate.py
src/: main.cpp
voltage/: voltage.ino
